<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="10dp"
        android:weightSum="1">
        <EditText
            android:id="@+id/field1"
            android:hint="@string/field1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>
        <EditText
            android:id="@+id/field2"
            android:hint="@string/field2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/separator"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:gravity="center"
        android:textAllCaps="true" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/field3"
            android:hint="@string/field3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>
        <EditText
            android:id="@+id/field4"
            android:hint="@string/field4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/ok"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"/>
</LinearLayout>